hphp/hack/test/typecheck/tconst/method_return.php.exp
File "method_return.php", line 23, characters 17-22:
Can't use `new static()` for `X`; `__construct` arguments are not guaranteed to be consistent in child classes (Typing[4060])
  File "method_return.php", line 3, characters 16-16:
  This declaration is neither `final` nor uses the `<<__ConsistentConstruct>>` attribute
File "method_return.php", line 26, characters 26-35:
Invalid return type (Typing[4336])
  File "method_return.php", line 26, characters 40-46:
  Expected `this::T`
  File "method_return.php", line 26, characters 26-35:
  But got `void` because this function does not always return a value
File "method_return.php", line 61, characters 29-54:
Invalid type hint (Typing[4352])
  File "method_return.php", line 61, characters 48-48:
  An abstract type constant is not allowed in this position.
  File "method_return.php", line 4, characters 23-23:
  `T` is abstract here.
